--- a/css/master.css
+++ b/css/master.css
@@ -6,13 +6,26 @@
   --font-color : white;
 }
 
+body{
+  background-color: #f2f2f2;
+}
 
+hr{
+  color: black;
+  border-top: 1px solid black;
+  width: 80%;
+}
+
+p{
+  margin-bottom: 0;
+}
 /*    NAVBAR   */
 
 /* Enlever les angles des bordures du haut */
 .navbar{
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-nav > li > a {
@@ -51,11 +64,55 @@
   }
 }
 
+.container{
+  margin-top: 0;
+  margin-bottom: 3%;
+}
+
 /*  FIN DE CONTAINER  */
+
+/* INTRODUCTION */
+
+.introduction{
+  background : url("/portfolio/img/background.png") no-repeat;
+  background-size: 1500px 1000px;
+  height: 500px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.introduction > h2{
+  color: white;
+  margin-top: 20px;
+}
+
+.introduction > img{
+  color: white;
+  margin-top: 175px;
+}
+
+
+/* FIN DE INTRODUCTION */
 
 /* PRESENTATION */
 
-.presentation > .col-sm-12 > .h2{
+.row > .col-sm-12 > h2{
   font-weight: bold;
+}
 
+.row > .col-sm-12 > h4{
+  font-weight: bold;
+}
+
+.parcours-hr{
+  width: 30%;
+}
+
+/* FIN DE PRESENTATION */
+
+/* PARCOURS */
+
+
+.row > .col-sm-2 > img{
+  margin-top: 20px;
 }
