--- a/css/master.css
+++ b/css/master.css
@@ -116,3 +116,17 @@ p{
 .row > .col-sm-2 > img{
   margin-top: 20px;
 }
+
+.parcours > .col-sm-2{
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.parcours > .col-sm-1{
+  padding-right: 0;
+  padding-left: 0;
+  margin-top: 15px;
+}
+
+.parcours > .col-sm-2 > img{
+  margin-top: 0;
